# udemy-crawling

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  main.py  models.py  notion_client.py  queue_handler.py  websocket_server.py
assets/: crawling.js
udemy_crawling/: __init__.py  queue_handler.py  websocket_server.py
udemy_crawling/core/: __init__.py  config.py  logger.py  models.py
udemy_crawling/notion/: __init__.py  connect.py  converter.py  creator.py  database.py  models.py
