[project]
name = "notion-udemy-sync"
version = "0.1.0"
description = "A script to sync Udemy course content with a Notion database"
authors = [
    {name = "Hayes", email = "92khsang@gmail.com"},
]
license="MIT"
requires-python = ">=3.10,<3.14"
readme = "README.md"
keywords = ["notion", "udemy", "sync", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "websockets>=14.0,<15.0.0",
    "pynotion @ git+https://github.com/92khsang/pynotion.git@4fb8524"
]

[tool.poetry]
package-mode = false